# allyend

./: -  .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  _head_models.py  _inspect_db.py  _tail_models.py  _tmp_tail.txt  _tmp_verify.py  alembic.ini  docker-compose.yaml  gorai.md  inspect_command_form.py  next-start.err  package.json  pyproject.toml  sdk_demo.py  testsdk.py  tmp_auth_lines.txt  tmp_slice.txt  update_mutations_refactor.py  给ai的话.md
app/: __init__.py  auth.py  config.py  constants.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: __init__.py  admin.py  auth.py  configs.py  crawlers.py  dashboard.py  files.py  md.py
app/static/: public_link.js  styles.css
app/templates/: admin.html  base.html  crawlers.html  dashboard.html  files.html  files_list.html  files_manage.html  home.html  index.html  login.html  public.html  public_link.html
app/utils/: __init__.py  audit.py  time_utils.py
deploy/nginx/: default.conf
docs/: frontend-sdk.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.mjs  stylelint.config.mjs  tailwind.config.ts  vitest.config.ts
frontend/test-results/: .last-run.json
migrations/: env.py
public/css/: style.css
scripts/: _head_models.py  _inspect_db2.py  _tmp_migrate.py  cleanup_orphan_crawlers.py  prestart.py  reset_database.py
sdk/: crawler_client.py
src/: server.js
test/: test_auth_api.py  test_files_router_utils.py
views/: layout.ejs
views/fake/: ads.ejs  (+5 more)
(+98 files in other folders)
