[project]
name = "crawler-hub"
version = "0.1.0"
description = "爬虫信息汇总与监控平台（FastAPI + SQLAlchemy + Jinja2 + SDK）"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.2.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "requests>=2.32.3",
]

[tool.uv]
# 当前仓库不作为可安装包，仅使用依赖管理
package = false
